--- a/css/style.css
+++ b/css/style.css
@@ -1195,7 +1195,7 @@ ul {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
   margin-top: 0;
-  color: #bcbcbc;
+  color: #333333;
   font-weight: 600;
   letter-spacing: -0.03em;
   line-height: 1.2;
@@ -1283,10 +1283,11 @@ b, strong {
 }
 
 p {
-  font-size: 17px;
-  color: #929292;
+  font-size: 16px;
+  color: #333333;
   font-weight: normal;
   line-height: 31px;
+  margin: 0 !important;
 }
 
 .list-inline {
@@ -1319,15 +1320,15 @@ p {
 
 @media (min-width: 768px) {
   .lead {
-    font-size: 18px;
+    font-size: 20px;
+    color: #666666;
   }
 }
 
 .lead {
-  margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 26px;
 }
 
 p.large {
@@ -5610,7 +5611,7 @@ input.btn-white {
 .project-des-2 {
   position: relative;
   padding:2rem !important;
-  background: #fffffff2;
+  background: #ffffff;
   box-shadow: 0px 0px 20px 8px #00000008;
   width: 100%;
   border-radius: 5px;
